--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,51 @@
 aniso8601==9.0.1
+cachetools==5.3.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
+ffmpeg-python==0.2.0
+filelock==3.10.0
 Flask==2.2.2
 Flask-RESTful==0.3.9
+future==0.18.3
+google-api-core==2.11.1
+google-api-python-client==2.86.0
+google-auth==2.20.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.59.1
+gunicorn==20.0.4
+httplib2==0.22.0
+huggingface-hub==0.13.2
+idna==3.4
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+more-itertools==9.1.0
+numpy==1.21.6
+oauth2client==4.1.3
+packaging==23.0
+Pillow==9.4.0
+protobuf==4.23.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pyparsing==3.0.9
 python-dotenv==0.21.0
+pytube==12.1.2
 pytz==2022.7
+PyYAML==6.0
+regex==2022.10.31
+requests==2.28.2
+rsa==4.9
 six==1.16.0
+tokenizers==0.13.2
 torch==1.13.0
 torchvision==0.14.0
+tqdm==4.65.0
+transformers==4.27.1
 typing_extensions==4.4.0
+uritemplate==4.1.1
+urllib3==1.26.15
 Werkzeug==2.2.2
+whisper==1.0
 zipp==3.11.0
-pytube==12.1.2
-google-api-python-client==2.86.0
-oauth2client==4.1.3
